Tours and Projects styles

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
@@ -4,6 +4,7 @@
 	position: relative;
 	height: 70vh !important;
 	max-height: 500px;
+	@include full-bg;
 	.center-hero-text {
 		@include center;
 		color: #ffffff;
