--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -121,6 +121,7 @@
 @import "components/plyr"; /// HTML5 AUDIO PLAYER
 @import "components/audio-player-skin"; /// HTML5 AUDIO PLAYER
 @import "components/artist-quicklook-content";
+@import "components/tour-wrapper";
 
 
 // Templates
