Phoho gallery attempt and narrow page template

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -104,6 +104,9 @@
 @import "modules/filter-header";
 @import "modules/route-map";
 @import "modules/schedule";
+@import "modules/main-settings";
+@import "modules/photoswipe";
+
 
 // Components
 @import "components/buttons";
@@ -134,5 +137,6 @@
 @import "templates/single-post";
 @import "templates/splash-page";
 @import "templates/tours-projects";
+@import "templates/narrow-page";
 @import "templates/single-format-audio"; // audio format single post.
 
