--- a/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
@@ -5,6 +5,7 @@
 	height: 70vh !important;
 	max-height: 500px;
 	@include full-bg;
+	text-align: center;
 	.center-hero-text {
 		@include center;
 		color: #ffffff;
