Footer mobile styles

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
@@ -55,3 +55,19 @@
     }
 }
 
+
+
+//**********************
+// Footer Media Queries*
+//**********************
+
+@include breakpoint(small only) {
+  #footer-container, .textwidget {
+    text-align: center;
+  }
+  article {
+    margin: $sitepadding 0;
+  }
+}
+
+
