--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -125,6 +125,7 @@
 @import "components/audio-player-skin"; /// HTML5 AUDIO PLAYER
 @import "components/artist-quicklook-content";
 @import "components/tour-wrapper";
+@import "components/single_artist_hero";
 
 
 // Templates
