--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -86,9 +86,23 @@
 	.artist-header-thumb {
 		height: 300px;
 		@include full-bg;
+		-webkit-box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
+		box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
 	}
 	.artist-navigation li {
 		display: inline;
+	}
+	.artist-details {
+		span.artist-category {
+			color: $brand-red;
+		}
+	}
+	.artist-social a {
+		color: #a9a8a6;
+		padding: 0 $sitepadding-small 0 0;
+	}
+	.side-bar-artist-details {
+	    line-height: 60px;
 	}
 }
 
