--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9700,7 +9700,8 @@ ul.single-page-nav {
   border: 1px solid gray;
   margin-bottom: 2em;
   -webkit-transition: 0.5s;
-  transition: 0.5s; }
+  transition: 0.5s;
+  background-color: #ffffff; }
   .magazine-item .magazine-item-container {
     padding: 1em; }
   .magazine-item .magazine-item-thumb {
@@ -10205,7 +10206,8 @@ header h1 {
   max-width: inherit !important; }
 
 .route-map {
-  min-height: 60vh; }
+  min-height: 60vh;
+  margin: 0 auto; }
 
 /*! PhotoSwipe main CSS by Dmitry Semenov | photoswipe.com | MIT license */
 /*
@@ -11055,6 +11057,33 @@ body.page .slick-dotted.slick-slider {
 .single-artists .side-bar-artist-details {
   line-height: 60px; }
 
+.single-artists .side-bar-header {
+  font-weight: bold; }
+
+.single-artists div#video-audio {
+  background: #262626; }
+  .single-artists div#video-audio h4.section-header {
+    color: #ffffff; }
+
+.single-artists .magazine-item {
+  background-color: #3E3E3E;
+  color: #ffffff; }
+
+.single-artists .artist-video-area .row.large-video-row {
+  margin: 0;
+  margin-left: 0;
+  margin-right: 0; }
+
+.single-artists .artist-video-area .video-description {
+  background: #3E3E3E;
+  color: #ffffff;
+  padding: 1em; }
+
+.single-artists .video-audio-area {
+  max-width: 100vw;
+  margin-left: 0;
+  margin-right: 0; }
+
 .artist-photo-wrapper, .magazine-item-thumb {
   position: relative;
   margin-bottom: 25px; }
@@ -11079,19 +11108,23 @@ body.page .slick-dotted.slick-slider {
 .hero-sub-header {
   text-transform: uppercase;
   color: #b38a76;
-  padding: 10px; }
+  padding: 8px 8px 2px 8px; }
+
+span.hero-blurb p {
+  margin-bottom: 0; }
 
 .hero-header {
   color: white;
   font-size: 35px;
-  padding: 10px; }
+  padding: 5px; }
 
 .hero-copy {
   color: white;
   padding: 10px; }
 
 button.hero-button {
-  padding: 10px; }
+  padding: 10px;
+  margin-top: 5px; }
   button.hero-button a {
     color: white;
     padding: 10px; }
@@ -12266,6 +12299,10 @@ ul.quick-look-links {
   margin: 25px 0; }
   ul.quick-look-links li {
     padding: 5px 0; }
+    ul.quick-look-links li span {
+      vertical-align: top; }
+  ul.quick-look-links a.share-button {
+    color: initial; }
 
 body.post-type-archive-artists .mfp-close-btn-in .mfp-close {
   top: -44px;
@@ -12806,20 +12843,14 @@ body.single.single-artists .enquiry-button {
         padding-right: 0.9375rem; } }
 
 #single-post {
-  max-width: 84.375rem;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 3rem; }
-  #single-post::before, #single-post::after {
-    content: ' ';
-    display: table; }
-  #single-post::after {
-    clear: both; }
   #single-post .main-content {
     width: 100%;
     float: left;
     padding-left: 0.625rem;
-    padding-right: 0.625rem; }
+    padding-right: 0.625rem;
+    padding-left: 0 !important;
+    padding-right: 0 !important; }
     @media screen and (min-width: 40em) {
       #single-post .main-content {
         padding-left: 0.9375rem;
