--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -5,6 +5,7 @@
 	border: 1px solid gray;
 	margin-bottom: 2em;
 	transition: 0.5s;
+	background-color: #ffffff;
 
 	.magazine-item-container {
 		padding: 1em;
