--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-post.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-post.scss
@@ -1,10 +1,12 @@
 #single-post {
-  @include grid-row();
+  //@include grid-row();
   margin-top: 3rem;
 
   .main-content {
     @include breakpoint(small) {
       @include grid-column(12);
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
 
     @include breakpoint(medium) {
