--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -51,13 +51,14 @@ $brown:         #B49A81;
 $lightbrown:    #F2F1ED;
 $bgdarkgrey:    #262626;
 $bggrey:        #3E3E3E;
-
+$brand-red:   $red;
 
 $sitepadding: 25px;
 $sitepadding-large: 50px;
 $sitepadding-small: 12.5px;
 
-$brand-red:   $red;
+$serif-font: 'GeometricSlab703BT-Light';
+
 
 // 1. Global
 // ---------
