--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -209,5 +209,7 @@
     display: flex;
     a.view-link {
         font-weight: bold;
+        line-height: 95px;
+        color: initial;
     }
 }
