--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -107,42 +107,51 @@
 	.side-bar-header {
 		font-weight: bold;
 	}
-	div#video-audio {
-		background: $bgdarkgrey;
-		h4.section-header {
-			color: #ffffff;
-		}
-	}
+
 	.magazine-item {
 		background-color: $bggrey;
 		color: #ffffff;
-	}
-
-	.artist-video-area {
-		.row.large-video-row {
-		    margin: 0;
-		    margin-left: 0;
-		    margin-right: 0;
-		}
-		.video-description {
-			background: $bggrey;
-			color: #ffffff;
-			padding: 1em;
-		}
-	}
-	.video-audio-area{
-		max-width: 100vw;
-		margin-left: 0;
-		margin-right: 0;
 	}
 
 }
 
 
 
+div#video-audio {
+	background: $bgdarkgrey;
+	h4.section-header {
+		color: #ffffff;
+	}
+	h3.section-header, a.view-link {
+		color: #ffffff;
+	}
+}
+
+.artist-video-area {
+	margin-bottom: $sitepadding;
+	.row.large-video-row {
+	    margin: 0;
+	    margin-left: 0;
+	    margin-right: 0;
+	}
+	.video-description {
+		background: $bggrey;
+		color: #ffffff;
+		padding: 1em;
+		height: 235px;
+	}
+}
+
+.video-audio-area {
+	max-width: 100vw;
+	margin-left: 0;
+	margin-right: 0;
+}
+
+
 .artist-photo-wrapper, .magazine-item-thumb {
 	position: relative;
-	margin-bottom: $sitepadding;
+	//margin-bottom: $sitepadding;
 }
 
 .overlay {
