--- a/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
@@ -9,6 +9,16 @@
     	color: white;
     	max-width: 90%;
     	margin: 0 auto;
+    	.text-banner-area {
+    		.banner-header {
+    			font-size: 24px;
+    			line-height: 2;
+    		}
+    		.banner-copy {
+    			font-size: 22px;
+    			line-height: 1.7;
+    		}
+    	}
     }
 }
 
