--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
@@ -17,6 +17,17 @@
     .menu > li {
         display: block;
         vertical-align: middle;
+        padding: 0 0 1.4rem 1rem !important;
+        a {
+          padding: 0;
+        }
+    }
+    h6 {
+      padding: 0 0 1.4rem 1rem !important;
+      margin-bottom: 0;
+    }
+    a {
+      color: inherit;
     }
       .footer-logo {
           position: absolute;
@@ -31,7 +42,7 @@
     }
     .social-icon {
         color: black;
-        padding: 0 15px;
+        padding: 0 30px 0 0;
     }
     i.fa-2x {
         font-size: 1.3em;
